
<resources>
    <string name="app_name">Балабоба</string>

    <string name="first_style">  Без стиля</string>
    <string name="second_style"> Короткие истории</string>
    <string name="third_style"> Короче, Википедия</string>
    <string name="fourth_style"> Синопсисы фильмов</string>
    <string name="fifth_style"> Народные мудрости</string>
    <string name="sixth_style"> Инструкция по применению</string>
    <string name="seventh_style"> Рецепты</string>

    <string name="first_style_info">Напишите что-нибудь и получите продолжение от Балабобы</string>
    <string name="second_style_info">Перечислите несколько предметов, а Балабоба придумает, как их использовать</string>
    <string name="third_style_info">Перечислите съедобные ингредиенты, а Балабоба придумает рецепт с ними</string>
    <string name="fourth_style_info">Начните писать историю, а Балабобы продолжит — иногда страшно, но чаще смешно</string>
    <string name="fifth_style_info">Напишите какое-нибудь слово, а Балабоба даст этому определение</string>
    <string name="sixth_style_info">Напишите название фильма (существующего или нет), а Балабоба расскажет вам, о чем он</string>
    <string name="seventh_style_info">Напишите что-нибудь и получите народную мудрость</string>




    <string name="menu_about_style_title">О стилях</string>
    <string name="menu_database_title">История</string>

    <string name="input_text_is_empty">Но вы же ничего не написали</string>
    <string name="balabob_it">Набалаболить</string>
    <string name="main_text_output_hint">Генератор может выдавать очень странные тексты. Пожалуйста, будьте разумны, распространяя их. Подумайте, не будет ли текст обидным для кого-то и не станет ли его публикация нарушением закона.
        Балабоба демонстрирует, как с помощью нейросетей семейства YaLM можно продолжать тексты на любую тему, сохраняя связность и заданный стиль. Здесь YaLM используется для развлечения, но разрабатывались модели для серьёзных задач — например, Поиска или Алисы.
        У Балабобы нет своего мнения или знания. Он умеет только подражать — писать тексты так, чтобы они были максимально похожи на реальные тексты из интернета.
    </string>
    <string name="Filter">Фильтр</string>
    <string name="main_text_input_hint">Напишите что-нибудь</string>
    <string name="menu_dark_theme">Темная тема</string>
    <string name="menu_filter_title">О фильтре</string>
    <string name="menu_home">Балабоба</string>
    <string name="block_settings">Настройки</string>
    <string name="main_block">Главное</string>


    <string name="error_no_internet">На линии помехи, Балабоба не может связаться с сервером</string>
    <string name="error_yandex_moment">Балабоба не смог придумать ответ, попробуйте снова</string>
    <string name="error_timeout">Мы долго ждали, но Балабоба так и не ответил</string>
    <string name="error_bad_text">Балабоба не принимает запросы на острые темы, например, про политику или религию. Люди могут слишком серьёзно отнестись к сгенерированным текстам.  Вероятность того, что запрос задаёт одну из острых тем, определяет нейросеть, обученная на оценках случайных людей. Но она может перестараться или, наоборот, что-то пропустить.</string>



    <string name="error_db_is_empty">Вы еще не общались с Балабобой</string>
    <string name="about_balaboba">Как работает Балабоба</string>
    <string name="open_sine">Открыть сайт</string>
    <string name="about_filter">Он что-то делает, а что - неизвестно</string>
    <string name="Links">Links</string>


</resources>