<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".fragments.main.MainFragment">

    <EditText
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="20sp"
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/main_text_input_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="1dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="10dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Filter" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/spinnerItems"
            android:minHeight="48dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:hint="@string/main_text_output_hint"
                android:padding="10dp"
                android:textSize="20sp" />
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"
            android:text="xdd"
            app:icon="@drawable/ic_filter"
            />

    </FrameLayout>
<!--    <Button-->

<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:textColor="@color/black"-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:foregroundGravity="bottom"-->
<!--        android:text="@string/balabob_it"-->
<!--        android:background="@drawable/main_button_background"/>-->
</LinearLayout>
